fixed double scroll bar in course list page inscrease number of course per page

--- a/client/src/containers/Courses/CourseList/PublicCourseList.scss
+++ b/client/src/containers/Courses/CourseList/PublicCourseList.scss
@@ -3,7 +3,7 @@
 .course-list-container {
   position: absolute;
   top: 0;
-  left: 15px;
+  left: 0;
   height: calc(100% - 60px);
   width: 100%;
   background-color: $white-background;
